style/app.css
/* ... */
#ws_callflow .callflow .root > .content .number_column .delete,
.callflow-preview .callflow .root > .content .number_column .delete {
	background-image: url(static/images/btn_delete.png);
	background-repeat: no-repeat;
	background-position: center;
	width: 6px;
	height: 6px;
	display: inline-block;
	position: absolute;
	padding: 5px;
	right: 0px;
	top: 0px;
	cursor: pointer;
}

#ws_callflow .callflow .root > .content .number_column .delete:hover,
.callflow-preview .callflow .root > .content .number_column .delete:hover {
	background-image: url(static/images/btn_delete_blue.png);
}

.callflow-preview span.delete,
.callflow-preview .number_column.empty,
.callflow-preview span.edit_icon {
	display: none !important;
}

#ws_callflow .callflow .node,
.callflow-preview .callflow .node {
	display: inline-block;
	cursor: -moz-grab;
	cursor: -webkit-grab;
	cursor: grab;
}

#ws_callflow .callflow .node.disabled,
.callflow-preview .callflow .node.disabled {
	opacity: 0.6;
}

#ws_callflow .callflow .node[name="root"],
.callflow-preview .callflow .node[name="root"] {
	cursor: default;
}

#ws_callflow .callflow .node .node-options .delete,
.callflow-preview .callflow .node .node-options .delete {
	background-image: url(static/images/btn_delete.png);
	background-repeat: no-repeat;
	background-position: center;
	width: 6px;
	height: 6px;
	position: absolute;
	top: 0px;
	right: 0px;
	padding: 5px;
	cursor: pointer;
}

#ws_callflow .callflow .node .node-options .delete:hover,
.callflow-preview .callflow .node .node-options .delete:hover {
	background-image: url(static/images/btn_delete_blue.png);
}

#ws_callflow .tool .icon,
.callflow-preview .tool .icon {
	margin: 2px;
	display: inline-block;
}

#ws_callflow .tools .category,
.callflow-preview .tools .category {
	text-align: center;
	background: url(static/images/background_category.png) no-repeat;
	background-position: top center;
	cursor: default;
}

#ws_callflow .tools .category .content,
.callflow-preview .tools .category .content {
	background-color: #777777;
	border: 1px solid #333333;
}

#ws_callflow .tools .open,
.callflow-preview .tools .open {
	font-size: 12px;
	height: 26px;
	line-height: 26px;
	background-repeat: no-repeat;
	background-position: 5px center;
}

#ws_callflow .tools .active .open,
.callflow-preview .tools .active .open {
	background-image: url(static/images/arrow_active.png);
	color: #22A5FF;
}

#ws_callflow .tools .inactive .open,
.callflow-preview .tools .inactive .open{
	background-image: url(static/images/arrow_inactive.png);
	cursor: pointer;
}

#ws_callflow .tools .tool,
.callflow-preview .tools .tool {
	background: #777777;
	float: left;
	width: 82px;
	padding-left: 1px;
	padding-top: 1px;
	cursor: -moz-grab;
	cursor: -webkit-grab;
	cursor: grab;
}

#ws_callflow .destination,
.callflow-preview .destination {
	border-radius: 2px;
	border: 3px solid #22A5FF;
}

#ws_callflow .tools .tool .action,
.callflow-preview .tools .tool .action {
	z-index: 19;
	height:56px;
	background: url(static/images/blackbox_small.png) no-repeat;
	min-width: 82px;
}

#ws_callflow .tools .app_list_nav,
.callflow-preview .tools .app_list_nav {
	background: #777777;
	padding-top: 1px;
}

#ws_callflow .callflow .icons_black.node,
.callflow-preview .callflow .icons_black.node {
	width: 143px;
	height: 84px;
	background: url(static/images/blackbox.png) no-repeat;
}

.callflow-preview .children .child:last-child:not(:first-child),
 #ws_cf_flow .children .child:last-child:not(:first-child) {
	padding-right: 10px;
}

.callflow-preview .children .child:first-child:not(:last-child),
#ws_callflow #ws_cf_flow .children .child:first-child:not(:last-child) {
	padding-left: 10px;
}

#ws_callflow .children > .child > .div_line,
.callflow-preview .children > .child > .div_line {
	display: inline-block;
	height: 6px;
	width: 100%;
	background-image: url(static/images/line_callflow.png);
	background-repeat: repeat-x;
	margin-top: -33px;
	margin-right: 0px;
	margin-left: 0px;
	padding: 0px;
	float: left;
}
#ws_callflow #ws_cf_flow .children > .child:first-child > .div_line,
.callflow-preview .children > .child:first-child > .div_line {
	width: 50%;
	float: right;
}
.callflow-preview .children > .child:last-child > .div_line,
#ws_callflow .children > .child:last-child > .div_line {
	width: 50%;
	float: left;
}

#ws_callflow .children > .child:first-child:last-child > .div_line,
.callflow-preview .children > .child:first-child:last-child > .div_line {
	display: none;
}

#ws_callflow .children > .child > .span_arrow,
.callflow-preview .children > .child > .span_arrow {
	display: inline-block;
	width: 145px;
	background-repeat: no-repeat;
	background-position: center center;
	margin: 2px 0px 2px;
	padding: 0px;
	position: relative;
}

#ws_callflow .children > .child > .span_arrow.small,
.callflow-preview .children > .child > .span_arrow.small {
	height: 31px;
	background-image: url(static/images/center_arrow.png);
}

#ws_callflow .children > .child:first-child > .span_arrow.small,
.callflow-preview .children > .child:first-child > .span_arrow.small {
	background-image: url(static/images/left_arrow.png);
}

#ws_callflow .children > .child:last-child > .span_arrow.small,
.callflow-preview .children > .child:last-child > .span_arrow.small {
	background-image: url(static/images/right_arrow.png);
}

#ws_callflow .children > .child:first-child:last-child > .span_arrow.small,
.callflow-preview .children > .child:first-child:last-child > .span_arrow.small {
	background-image: url(static/images/small_arrow.png);
}

#ws_callflow .children > .child > .span_arrow.large,
.callflow-preview .children > .child > .span_arrow.large {
	float: none;
	height: 48px;
	background-image: url(static/images/tall_arrow.png);
}

#ws_callflow .a_link_option,
.callflow-preview .a_link_option {
	color: #EEE;
	font-size: 12px;
}
/* ... */

